--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* POPPINS FONT FAMILY */
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
@@ -5,174 +6,449 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+
 body {
-
-  background-color: antiquewhite;
+  background-color: #f5f5f5;
+  overflow-x: hidden;
 }
 
-/* -----------NAVBAR----------- */
+/* -----------------------------------------
+--------------------Navbar------------------
+------------------------------------------- */
+
+header {
+  background-color: #3400ff;
+  height: 500px;
+}
+
 .logo {
-  margin-left: 50px;
-  margin-top: 10px;
+  margin: 20px;
 }
+
+.menu-bar, #check, .fa-solid {
+  display: none;
+}
+
 nav {
-  display: flex;
+  color: white;
   float: right;
-  margin-top: 15px;
-  margin-right: 25px;
-}
-svg.nav-item {
   margin-right: 30px;
-  padding-left: 20px;
-  margin-top: 7px;
+  margin-top: 20px;
 }
-nav > a{
-  padding: 0 5px;
+
+.nav-item {
+  margin-right: 20px;
+  cursor: pointer;
 }
-.nav-item-active {
-  background-color: #fff;
-  padding: 2px 5px;
-  border-radius: 3px;
+
+.nav-item-active{
+  margin-right: 10px;
+  background-color: white;
+  color: #5a31fc;
+  border-radius: 4px;
+  padding: 5px;
+  cursor: pointer;
 }
-/* ------header------- */
 
 .header-text {
+  margin-left: 20px;
   margin-top: 50px;
-  margin-left: 50px;
-}
-header {
-  background-color: rgb(129, 129, 240);
-  height: 340px;
+  float: left;
+  color: white;
 }
 
-.header-image{
-  width: 400px;
-  margin-top: -136px;
+.header-text h2 {
+  font-size: 6vmin;
+}
+
+.header-image {
+  margin-top: 30px;
   float: right;
 }
-.companies{
-  margin-left: 47px;
-  text-decoration: none;
-  color: white;
-  margin-top: 12px;
-}
-.company-items{
-  padding: 0 10px;
-  text-decoration: none;
-  color: #000000;
-  font-weight: 500;
-  font-size: 13px;
-  font-family: 'Righteous';
-}
-.api{
-  margin-left: 47px;
-}
-.cards{
-  justify-content: space-between;
-  display: flex;
 
-}
-.blog-cards{
-  margin-left: 47px;
-  display: flex;
-  justify-content: space-between;
-}
-.blog-card{
-  display: flex;
-  border-radius: 9px;
-  height: 287px;
-  width: 700px;
-  border-top-left-radius: 60px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.blog-bottom img, .blog-author {
-  margin-top: 20px;
+.companies {
   margin-left: 20px;
+  margin-top: 20px;
 }
-b.blog-content {
-  margin-left: 11px;
-  font-size: 15px;
-  padding-right: 20px;
-}
-.blog-author{
-  margin-left: 10px;
-  padding-top: 10px;
-  padding-right: 10px;
-}
-.faq-section{
-  margin-left: 47px;
-}
-.blog-heading{
-  margin-left: 47px;
-}
-.faq-content button{
-  background-color: blue;
-  color: white;
-  border: none;
-}
-.faq-section{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 40px;
-}
-.download-section{
-  margin-left: 47px;
-  display: flex;
-  justify-content: space-between;
-}
-.download-email {
 
-  margin-right: 25px;
-  border-radius: 50px;
-  width: 500px;
-  height: 50px;
-  border: 2px solid black;
+.company-items {
+  margin-left: 20px;
+  text-decoration: none;
+  color: black;
+  font-weight: 800;
+  font-size: 3vmin;
+}
+
+/* -----------------------------------------
+--------------------API Section------------------
+------------------------------------------- */
+
+.api-heading {
+  margin-top: 70px;
+  margin-left: 40px;
+}
+
+.cards {
+  margin-top: 50px;
+  margin-left: 40px;
+  display: flex;
+}
+
+.card {
+  padding: 15px;
+  height: 250px;
+  width: 20%;
+  background-color: white;
+  margin-left: 10px;
+  border-radius: 15px;
+  
+}
+
+.card-active {
+  height: 250px;
+  width: 20%;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 1px 1px 10px black;
+  margin-left: 10px;
+  border-radius: 15px;
+}
+
+/* -----------------------------------------
+--------------------Blog Section------------------
+------------------------------------------- */
+
+.blog-heading {
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+.blog-cards {
+  margin-left: 40px;
+  display: flex;
+  gap: 20px;
+}
+
+.blog-card {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  height: 356px;
+  border-radius: 20px;
+  border-top-left-radius: 80px;
+  
+  width: 48%;
+}
+
+.blog-image img{
+  width: 310px;
+}
+
+.blog-content {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.blog-bottom, .blog-author {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-right: 10px;
 }
-form input {
+
+small {
+  font-size: 12px;
+}
+
+.blog-content h6 {
+  color: blue;
+}
+
+/* -----------------------------------------
+--------------------FAQ Section------------------
+------------------------------------------- */
+
+.faq-section {
+  margin-left: 40px;
+}
+
+.faq-content h2 {
+  font-size: 6vmin;
+}
+
+.faq-content h4 {
+  font-size: 2vmin;
+}
+
+.faq-content button{
+  background-color: #3400ff;
+  color: white;
+  padding: 7px 10px;
   border: none;
-  background-color: antiquewhite;
+  border-radius: 5px;
 }
-form button {
-  border-radius: 20px;
-  padding: 3px 20px;
-  margin-left: 140px;
-  background-color: blue;
-  color: #fff;
-}
-.footer-section{
-  position: absolute;
-  left: 0;
+
+
+.faq-section {
+  margin: 0px;
+  padding-left: 40px;
+  margin-top: 80px;
+  background-color: rgb(242, 230, 230);
   display: flex;
-  background-color: blueviolet;
-  width: 100%;
-  height: 120px;
+  height: 400px;
+  justify-content: space-between;
 }
-.list{
-  display: flex;
+
+.faq-image img{
+  height: 400px;
 }
-.footer-right{
-  margin-left: 490px;
-  margin-top: 10px;
-}
-.logos-list{
-  margin-top: 0px;
+
+/* -----------------------------------------
+--------------------DOWNLOAD SECTION------------------
+------------------------------------------- */
+
+.download-section {
+  margin-top: 100px;
+  margin-left: 40px;
   display: flex;
   justify-content: space-between;
-  float: right;
-  position: absolute;
-  margin-left: 444px;
-  font-size: 15px;
+  margin-right: 140px;
 }
-.list-items{
-  list-style: none;
-  margin-bottom: 10px;
+
+.download-content h1 {
+  font-weight: bold;
 }
-.footer-logo{
-  margin-left: 54px;
-  margin-top: 30px;
-  width: 83px;
+
+.download-content h1 span {
+  font-weight: normal;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  background-color: #fff;
+  padding: 7px 20px;
+  width: 500px;
+  border-radius: 30px;
+  background-color: rgb(242, 230, 230);
+}
+
+input {
+  border: none;
+  background-color: transparent;
+}
+
+form button{
+  background-color: #3400ff;
+  color: white;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 30px;
+  text-transform: uppercase;
+  margin-right: -10px;
+}
+
+/* -----------------------------------------
+--------------------FOOTER------------------
+------------------------------------------- */
+
+.footer-section {
+  padding-top: 20px;
+  height: 200px;
+  margin-top: 80px;
+  display: flex;
+  align-items: center;
+  background-color: #3400ff;
+  justify-content: space-between;
+}
+
+.footer-left {
+  margin-left: 40px;
+}
+
+.logos-list .list-items {
+  margin-right: 10px;
+  margin-left: 5px;
+  color: white;
+}
+
+.footer-right {
+  margin-right: 50px;
+}
+
+.footer-right img {
+  margin-left: 20px;
+}
+
+ul {
+  margin-left: -40px;
+}
+
+li {
+  display: inline-block;
+  color: white;
+  margin-left: 20px;
+}
+
+/* -----------------------------------------
+--------------------MOBILE DESIGN------------------
+------------------------------------------- */
+
+
+
+@media only screen and (max-width: 768px) {
+
+  nav {
+    margin-top: 80px;
+    position: fixed;
+    width: 60%;
+    text-align: center;
+    height: 100vh;
+    background: #000;
+    border-radius: 20px;
+    margin-left: -100%;
+    transition: all 0.5s;
+  }
+
+  nav a {
+    display: block;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  nav a:hover {
+    background-color: white;
+    color: #5a31fc;
+    border-radius: 4px;
+    padding: 5px 0;
+    margin-left: 10px;
+  }
+
+  .nav-item-active {
+    margin-left: 10px;
+  }
+  
+  .fa-solid {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    font-size: 6vmin;
+    color: white;
+    cursor: pointer;
+  }
+
+  #check {
+    position: absolute;
+    top: 30px;
+    right: 100px;
+  }
+
+  #check:checked ~ nav {
+    margin-left: 0px;
+  } 
+
+  .header-image {
+    display: none;
+  }
+
+  .cards {
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+  }
+
+  .card {
+    width: 250px;
+  }
+
+  .card-active{
+    width: 250px;
+  }
+
+  .blog-card {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 80px;
+  }
+
+  .blog-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 400px;
+    margin: 60px;
+    
+  }
+
+  .api-heading {
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .blog-heading {
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .faq-section {
+    margin-top: 350px;
+    flex-direction: column;
+    grid: 50px;
+    height: 600px;
+    text-align: center;
+  }
+
+  .faq-image img {
+    width: 400px;
+    height: 300px;
+  }
+
+  .download-section {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .download-content h1 {
+    margin-left: 120px;
+    text-align: center;
+  }
+
+  form {
+    margin-left: 120px;
+    width: 320px;
+  }
+
+  li {
+    font-size: 10px;
+    margin-left: 20px;
+  }
+
+  .footer-right ul {
+    margin-left: 30px;
+  }
+
+  ul {
+    display: flex;
+    margin-left: -10px;
+    padding: 0;
+  }
+
+  .footer-right-logo {
+    margin-top: 0px;
+    display: flex;
+    margin-right: -10px;
+  }
+
 }
